Changes for 1.1beta12:

 - fixed bad performance of previous beta because of wrong DBselectN() (Alexei)
 - added support for direct sending of SMS via GSM modem (Alexei)
 - fixed syncing of graphs with templates (Alexei)
 - fixed typo in MySQL's schema.sql (Alexei)
 - fixed applying of actions having Trigger Value in condition (Alexei)
 - fixed evaluation of aggregate functions (Alexei)

Changes for 1.1beta11:

 - fixed PostgreSQL schema (Alexei)
 - fixed items grouping of Data overview screen (Eugene)
 - fixed image storing for oracle (Eugene)
 - eliminated function DBaffected_rows() (Alexei)
 - new function DBselectN() to select N records only. (Alexei)
 - fixed graph duplication (Eugene)
 - fixed oracle SQL request creating (Eugene)
 - fixed first host selection from list of accessed hosts (Eugene)
 - fixed evaluation of action's conditions (Alexei)
 - fixed agent.ping in Windows agent (Alexei)
 - cleaned SQL statements to have mod() instead of % (Alexei)
 - fixed displaying of graphs for periods more than 24h (Alexei)
 - modified oracle schema to initialise sequences with 20000 (Alexei)
 - fixed oracle sql request limitation (Eugene)

Changes for 1.1beta10:

 - fixed 'EventLog' monitoring for Win32 ZABBIX agent (Eugene)
 - fixed Win32 ZABBIX agent crash (Eugene)
 - added selection button for item keys (Alexei)
 - new table 'help_items' (Alexei)
 - fixed confugration of triggers having logseverity() (Alexei)
 - changed size of functions.function to varchar(12) (Alexei)
 - fixed evaluation of simple checks (Alexei)
 - fixed history cleaning for logs (Eugene)
 - fixed left axis calculation of graph (Eugene)
 - fixed Win32 ZABBIX agent log monitoring (Eugene)
 - renamed screens_items.resource -> resourcetype (Alexei)
 - renamed screens.rows ->vsize, cols -> hsize (Alexei)
 - renamed audit.resource -> resourcetype (Alexei)
 - fixed evaluation of max,min,count,sum for item having integer values (Alexei)
 - support of special unit "unixtime" (Alexei)