@@ -1,0 +1,2 @@
+alter table actions drop delay;
+alter table actions drop nextcheck;
